--- a/src/main/resources/static/css/mystyle.css
+++ b/src/main/resources/static/css/mystyle.css
@@ -210,7 +210,7 @@ img:hover {
 body
 {
     /*背景图片*/
-    background-image:url('static.image/4.jpg');
+    background-image:url('static.images/4.jpg');
     background-color:#cccccc;
     background-repeat:no-repeat;
     background-size: 100%;
