--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>错误</title>
+    <link rel="stylesheet" type="text/css" href="css\mystyle.css">
 </head>
 <body>
+    <div class="size2">
 <div th:text="${message}">详细错误</div>
 <button onclick="javascript:window.history.back(-1);">返回</button>
+    </div>    
 </body>
 </html>
