--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>主页</title>
+    <link rel="stylesheet" type="text/css" href="css\mystyle.css">
 </head>
 <body>
-<div>欢迎来到主页</div>
+<div><h1 style="text-align: center">欢迎来到主页</h1></div>
+    <div class="center">
+    <div class="box7">
+        <div class="center">
 <div><a href="/single_choice">单人游戏</a></div>
 <div><a href="/many">多人游戏</a></div>
 <div><a href="/userAddGameContent">创建问题</a></div>
+       </div>
+    </div>
+    </div>
 </body>
 </html>
