--- a/src/main/resources/templates/many.html
+++ b/src/main/resources/templates/many.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>多人游戏</title>
+    <link rel="stylesheet" type="text/css" href="css\mystyle.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+    <div class="size2">
 <div class="col-md-8">
     <div id="text_chat" style="display: none">
         <div>当前房间:<span id="room_name"></span></div>
@@ -44,6 +46,7 @@
         <tbody id="userForm">
         </tbody>
     </table>
+</div>
 </div>
 
 <script type="text/javascript">
