--- a/src/main/resources/templates/single_choice.html
+++ b/src/main/resources/templates/single_choice.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>模式选择</title>
+    <link rel="stylesheet" type="text/css" href="css\mystyle.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
 </head>
 <body>
+    <div class="size2">
 <a href="/single"><button>单人随机游戏</button></a>
 <div>指定题目</div>
 <form  id="form" action="#" onsubmit="validate()" method="post">
@@ -26,5 +28,6 @@
         return true;
     }
 </script>
+</div>        
 </body>
 </html>
