--- a/src/main/resources/templates/userAddGameContent.html
+++ b/src/main/resources/templates/userAddGameContent.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>用户添加题目</title>
+    <link rel="stylesheet" type="text/css" href="css\mystyle.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
+    <div class="size2">
 <div>
     <div>添加答案：<input id="add_question" value=""></div>
     <div>添加提示：<input id="add_describe" value=""></div>
@@ -32,7 +34,7 @@
     </div>
 </div>
 <div id="question"><button id="add_result">确定添加题目</button></div>
-
+</div>
 <script type="text/javascript">
     $('#question').hide();
     var array = [];
