--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>单人游戏</title>
+    <link rel="stylesheet" type="text/css" href="css\mystyle.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
