--- a/src/main/resources/templates/userAddGameContent.html
+++ b/src/main/resources/templates/userAddGameContent.html
@@ -12,10 +12,10 @@
     <div>添加答案：<input id="add_question" value=""></div>
     <div>添加提示：<input id="add_describe" value=""></div>
     <div class="file-box">
-        <label class="change-photo-btn">
+        <button id="add_button">添加图片
             <input type="file" value="" name="file" id = "input_file"
                    accept="image/gif,image/jpeg,image/jpg,image/png,image/svg" onchange="imgPreview(this,0)" >
-        </label>
+        </button>
     </div>
     <p></p>
     <div>
